--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "nx": "13.9.5",
     "@nrwl/cli": "13.9.5",
     "@nrwl/workspace": "13.9.5",
+    "@nxrocks/nx-flutter": "^3.0.2",
     "@types/node": "16.11.7",
-    "typescript": "~4.5.2",
-    "prettier": "^2.5.1"
+    "nx": "13.9.5",
+    "prettier": "^2.5.1",
+    "typescript": "~4.5.2"
   }
 }
